--- a/pxlmkr/pxlmkr.csproj
+++ b/pxlmkr/pxlmkr.csproj
@@ -185,5 +185,8 @@
   <ItemGroup>
     <None Include="Resources\icons8_edit_file_26px.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8_crop_26px.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
