--- a/pxlmkr/pxlmkr.csproj
+++ b/pxlmkr/pxlmkr.csproj
@@ -56,7 +56,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
+    <Page Include="Editor.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -64,8 +64,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
+    <Compile Include="Editor.xaml.cs">
+      <DependentUpon>Editor.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
@@ -96,97 +96,97 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_paint_brush_26px.png" />
+    <Resource Include="Resources\icons8_paint_brush_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_pencil_26px.png" />
+    <Resource Include="Resources\icons8_pencil_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_line_26px.png" />
+    <Resource Include="Resources\icons8_line_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_fill_color_26px.png" />
+    <Resource Include="Resources\icons8_fill_color_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_eraser_26px.png" />
+    <Resource Include="Resources\icons8_eraser_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_color_dropper_26px.png" />
+    <Resource Include="Resources\icons8_color_dropper_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_rectangle_26px.png" />
+    <Resource Include="Resources\icons8_rectangle_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_ellipse_26px.png" />
+    <Resource Include="Resources\icons8_ellipse_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_type_26px.png" />
+    <Resource Include="Resources\icons8_type_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_first_quarter_26px.png" />
+    <Resource Include="Resources\icons8_first_quarter_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_layers_26px.png" />
+    <Resource Include="Resources\icons8_layers_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_paint_palette_26px.png" />
+    <Resource Include="Resources\icons8_paint_palette_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_copy_26px.png" />
+    <Resource Include="Resources\icons8_copy_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_flip_horizontal_26px.png" />
+    <Resource Include="Resources\icons8_flip_horizontal_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_flip_vertical_26px.png" />
+    <Resource Include="Resources\icons8_flip_vertical_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_rotate_left_26px.png" />
+    <Resource Include="Resources\icons8_rotate_left_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_rotate_right_26px.png" />
+    <Resource Include="Resources\icons8_rotate_right_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_drag_26px.png" />
+    <Resource Include="Resources\icons8_drag_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_rectangular_26px.png" />
+    <Resource Include="Resources\icons8_rectangular_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_zoom_out_26px.png" />
+    <Resource Include="Resources\icons8_zoom_out_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_zoom_in_26px.png" />
+    <Resource Include="Resources\icons8_zoom_in_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_invert_selection_26px.png" />
+    <Resource Include="Resources\icons8_invert_selection_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_up_26px.png" />
+    <Resource Include="Resources\icons8_up_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_down_arrow_26px.png" />
+    <Resource Include="Resources\icons8_down_arrow_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_trash_26px.png" />
+    <Resource Include="Resources\icons8_trash_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_save_26px.png" />
+    <Resource Include="Resources\icons8_save_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_save_as_26px.png" />
+    <Resource Include="Resources\icons8_save_as_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_add_file_26px.png" />
+    <Resource Include="Resources\icons8_add_file_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_delete_file_26px.png" />
+    <Resource Include="Resources\icons8_delete_file_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_edit_file_26px.png" />
+    <Resource Include="Resources\icons8_edit_file_26px.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8_crop_26px.png" />
+    <Resource Include="Resources\icons8_crop_26px.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
