validating project size settings

--- a/pxlmkr/App.config
+++ b/pxlmkr/App.config
@@ -1,6 +1,39 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="pxlmkr.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <userSettings>
+        <pxlmkr.Properties.Settings>
+            <setting name="DefaultPixelCountHeight" serializeAs="String">
+                <value>16</value>
+            </setting>
+            <setting name="DefaultPixelCountWidth" serializeAs="String">
+                <value>16</value>
+            </setting>
+            <setting name="DefaultPixelSize" serializeAs="String">
+                <value>16</value>
+            </setting>
+            <setting name="DefaultProjectHeight" serializeAs="String">
+                <value>256</value>
+            </setting>
+            <setting name="DefaultProjectWidth" serializeAs="String">
+                <value>256</value>
+            </setting>
+            <setting name="LMBAction" serializeAs="String">
+                <value>Paint Primary Color</value>
+            </setting>
+            <setting name="MMBAction" serializeAs="String">
+                <value>Pan</value>
+            </setting>
+            <setting name="RMBAction" serializeAs="String">
+                <value>Paint Secondary Color</value>
+            </setting>
+        </pxlmkr.Properties.Settings>
+    </userSettings>
 </configuration>
